--- a/comments-app-api/package.json
+++ b/comments-app-api/package.json
@@ -35,14 +35,17 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.4.4",
+    "@nestjs/platform-socket.io": "^10.4.6",
+    "@nestjs/swagger": "^8.0.0",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.4.4",
+    "@nestjs/websockets": "^10.4.6",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.1",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sanitize-html": "^2.13.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -52,6 +55,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/sanitize-html": "^2.13.0",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
